--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,3 +1,6 @@
+@import "~antd/dist/antd.less";
+@import "theme.less";
+
 @import "_variables.less";
 @import "_functions.less";
 @import "basic.less";
